Changed last column on score table to remove column padding. Hopefully removes some of the weirder looking whitespace and fixes slight scroll issue.

--- a/pickem/static/pickem/css/scores.css
+++ b/pickem/static/pickem/css/scores.css
@@ -10,6 +10,5 @@ table.scoreboard {
 }
 
 .totals {
-    text-align: left;
-    float: left;
+    padding-left: 0px;
 }
